--- a/PacketGenerator/PacketGenerator.csproj
+++ b/PacketGenerator/PacketGenerator.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="PDL.xml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call postbuild.bat $(SolutionDir) $(TargetDir)" />
+  </Target>
+
 </Project>
